# CompoundV2_Credit-Scoring-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
output/: top_1000_wallets.csv
src/zeru_credit_score/: features.py  loader.py  logging_config.py  main.py  scoring.py
src/zeru_credit_score/scripts/: run_sensitivity.py
tests/: test.ipynb
